fixed description to not say it's mohit's website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }} | {{ page.title }}</title>
-  <meta name="description" content="Homepage of Mohit Yadav">
-  <meta name="author" content="Mohit Yadav">
+  <meta name="description" content="Homepage of Miguel Fuentes">
+  <meta name="author" content="Miguel Fuentes">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
